Estilos, navegación y se eliminaron posts de prueba

--- a/es/guias-practicas/index.html
+++ b/es/guias-practicas/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 mainClasses: category blog
+categories: [es, guias-practicas]
 ---
 
-{% include post-listing.html category="guias-practicas" %}
+{% include post-listing.html  %}
 
 
 
