--- a/es/java/index.html
+++ b/es/java/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 mainClasses: category blog
+categories: [es, java]
 ---
 
-{% include post-listing.html category="java" %}
+{% include post-listing.html %}
 
 
 
