--- a/es/java/spring-framework/index.html
+++ b/es/java/spring-framework/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 mainClasses: category blog
+categories: [es, java, spring-framework]
 ---
 
-{% include post-listing.html category="spring-framework" %}
+{% include post-listing.html %}
 
 
 
