--- a/es/programacion-funcional/scala/index.html
+++ b/es/programacion-funcional/scala/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 mainClasses: category blog
+categories: [es, programacion-funcional, scala]
 ---
 
-{% include post-listing.html category="scala" %}
+{% include post-listing.html  %}
 
 
 
