--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 mainClasses: home blog
+categories: [all]
 ---
 
-{% include post-listing.html category="all" %}
+{% include post-listing.html %}
 
 
 
