--- a/es/programacion-funcional/index.html
+++ b/es/programacion-funcional/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 mainClasses: category blog
+categories: [es, programacion-funcional]
 ---
 
-{% include post-listing.html category="programacion-funcional" %}
+{% include post-listing.html %}
 
 
 
